--- a/API/package.json
+++ b/API/package.json
@@ -1,6 +1,20 @@
 {
   "dependencies": {
+    "-": "^0.0.1",
+    "bcrypt": "^5.1.1",
+    "D": "^1.0.0",
     "express": "^4.19.2",
-    "mysql2": "^3.11.0"
-  }
+    "mysql2": "^3.11.0",
+    "nodemon": "^3.1.4"
+  },
+  "name": "patinhasdobem",
+  "version": "1.0.0",
+  "main": "App.js",
+  "devDependencies": {},
+  "scripts": {
+    "devStart": "nodemon App.js"
+  },
+  "author": "lucas manrick",
+  "license": "ISC",
+  "description": ""
 }
