--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-patinhasdobem",
+  "name": "patinhasdobem",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -11,20 +11,18 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-deck-swiper": "^2.0.17",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-gifted-chat": "^2.5.1",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
