--- a/API/package.json
+++ b/API/package.json
@@ -3,14 +3,15 @@
     "-": "^0.0.1",
     "bcrypt": "^5.1.1",
     "D": "^1.0.0",
+    "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4"
   },
   "name": "patinhasdobem",
   "version": "1.0.0",
   "main": "App.js",
-  "devDependencies": {},
   "scripts": {
     "devStart": "nodemon App.js"
   },
