--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-typewriter": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
