--- a/API/package.json
+++ b/API/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "D": "^1.0.0",
     "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
