--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
@@ -21,12 +23,18 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "react-native-typewriter": "^0.7.0"
+    "react-native-typewriter": "^0.7.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-private-methods": "^7.25.4",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
