--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
