--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "apisauce": "^3.0.1",
     "axios": "^1.7.7",
     "dotenv-safe": "^9.1.0",
     "expo": "~51.0.28",
