--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
