--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -23,6 +23,8 @@
     "dotenv-safe": "^9.1.0",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
+    "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +33,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.2",
@@ -38,8 +41,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-typewriter": "^0.7.0",
     "react-native-vector-icons": "^10.1.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-media-library": "~16.0.5"
+    "expo-image-manipulator": "~12.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
