--- a/API/package.json
+++ b/API/package.json
@@ -7,6 +7,7 @@
     "D": "^1.0.0",
     "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
+    "firebase": "^10.14.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
     "nodemon": "^3.1.4"
