--- a/API/package.json
+++ b/API/package.json
@@ -10,7 +10,8 @@
     "firebase": "^10.14.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.8.0"
   },
   "name": "patinhasdobem",
   "version": "1.0.0",
