--- a/Mobile/PatinhasDoBem/package.json
+++ b/Mobile/PatinhasDoBem/package.json
@@ -41,6 +41,7 @@
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-typewriter": "^0.7.0",
     "react-native-vector-icons": "^10.1.0"
   },
