--- a/WEB/package.json
+++ b/WEB/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "firebase": "^11.0.1",
+    "js-cookie": "^3.0.5",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0"
   }
