--- a/API/netlify.toml
+++ b/API/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "node app.js"  # Comando para iniciar seu servidor
+command = "node App.js"  # Comando para iniciar seu servidor
 publish = "WEB/Public"       # Diretório de publicação (pode ser um diretório vazio)
 
 [build.environment]
