--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
     "nodemon": "^3.1.4",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.8.0"
   },
   "name": "patinhasdobem",
