--- a/API/vercel.json
+++ b/API/vercel.json
@@ -2,5 +2,10 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/WEB/View/Pages/$1" }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs14.x"
+    }
+  }
 }
