--- a/API/vercel.json
+++ b/API/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
+  "builds":[
+    {
+      "src":"App.js",
+      "use":"@vercel/node"
+    }
+  ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1" 
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/App.js"
+      "src": "(.*)",
+      "dest": "App.js"
     }
   ]
 }
