--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
+    "migrate": "sequelize db:migrate",
     "devStart": "nodemon App.js",
     "start": "node App.js",
     "vercel-build": "npm run migrate"
