deploy test free trial

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SECRET=goodPaw
-PORT = 4000
-BDPASSWORD=kIZkzIsRtAmzBOmNouTqTPhsMiXtUhYH
+PORT = 13278
+BDPASSWORD=AVNS_d9jCfBAmEywwJ7QrZS0;
+HOST=mysql-39f08adb-lucasmanrick-98a3.b.aivencloud.com;
+USER=avnadmin;
