--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "D": "^1.0.0",
+    "dotenv": "^16.4.5",
     "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
     "firebase": "^10.14.1",
